Constants converted to Java15 'Records'